playing with @Validate, @Valid, Validator and AccountException

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ server.error.whitelabel.enabled=false
 #TODO ca sa nu mai primesc warningul cand pun http://localhost:8080/transactions/account/1/date-time/2021-09-30T18:00:00
 spring.mvc.format.date-time=iso
 
+logging.level.web=DEBUG
+
